porting 1.12.2